--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,5 +1,5 @@
 name = "delta-webhook-worker"
-type = "javascript"
+main = "src/index.js"
 compatibility_date = "2025-06-20"
 
 [observability.logs]
